drag and drop functionality implemented

--- a/QMidiAn1x.vcxproj
+++ b/QMidiAn1x.vcxproj
@@ -117,18 +117,21 @@
     <ClCompile Include="src\Database\Database.cpp" />
     <ClCompile Include="src\Model\An1File.cpp" />
     <ClCompile Include="src\Model\An1xPatch.cpp" />
+    <ClCompile Include="src\Model\DragDropManager.cpp" />
     <ClCompile Include="src\Model\PatchDatabase.cpp" />
     <ClCompile Include="src\Model\PatchMemory.cpp" />
     <ClCompile Include="src\View\ArpSeq.cpp" />
     <ClCompile Include="src\View\Browser.cpp" />
     <ClCompile Include="src\View\BrowserTableModel.cpp" />
     <ClCompile Include="src\View\ControlMatrixScene.cpp" />
+    <ClCompile Include="src\View\DbTableView.cpp" />
     <ClCompile Include="src\View\FreeEGWidget.cpp" />
     <ClCompile Include="src\View\FreeEG\EGPath.cpp" />
     <ClCompile Include="src\View\FreeEG\FreeEGScene.cpp" />
     <ClCompile Include="src\View\FreeFunctions.cpp" />
     <ClCompile Include="src\View\FxEq.cpp" />
     <ClCompile Include="src\View\GlobalWidgets.cpp" />
+    <ClCompile Include="src\View\MemoryList.cpp" />
     <ClCompile Include="src\View\PianoRoll\PianoKey.cpp" />
     <ClCompile Include="src\View\PianoRoll\PianoView.cpp" />
     <ClCompile Include="src\View\UiWidgets.cpp" />
@@ -165,12 +168,15 @@
     <ClInclude Include="src\Model\An1File.h" />
     <ClInclude Include="src\Model\An1xPatch.h" />
     <QtMoc Include="src\View\Browser.h" />
+    <ClInclude Include="src\Model\DragDropManager.h" />
     <ClInclude Include="src\Model\PatchDatabase.h" />
     <ClInclude Include="src\Model\PatchMemory.h" />
     <QtMoc Include="src\View\BrowserTableModel.h" />
     <ClInclude Include="src\Model\PatchRow.h" />
+    <QtMoc Include="src\View\DbTableView.h" />
     <ClInclude Include="src\View\FreeEG\EGPath.h" />
     <ClInclude Include="src\View\FreeFunctions.h" />
+    <QtMoc Include="src\View\MemoryList.h" />
     <ClInclude Include="src\View\PianoRoll\PianoKey.h" />
     <QtMoc Include="src\View\VoiceNameEdit.h" />
     <QtMoc Include="src\View\UiWidgets.h" />
