--- a/QMidiAn1x.vcxproj
+++ b/QMidiAn1x.vcxproj
@@ -194,6 +194,9 @@
   <ItemGroup>
     <ResourceCompile Include="QAN1xEditor.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
