--- a/QMidiAn1x.vcxproj
+++ b/QMidiAn1x.vcxproj
@@ -195,6 +195,8 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.ico" />
+    <Image Include="installer\icon.ico" />
+    <Image Include="installer\win\icon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
